Changed map to a different location and fixed display issue on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -696,6 +696,10 @@ button:focus{
 .ml-auto{
     margin-left:170px!important;
 }
+
+.map-container{
+    height:75%;
+}
     
 }
 
